--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,13 +50,17 @@ jobs:
     - name: set PYTHON LINK_OPTS
       run: ./pre_build.sh
       shell: bash
+
     - name: bazel test
+      uses: actions/checkout@v3
       run: |
-        bazel test --test_output=errors --config=linux common_test
-        bazel test --test_output=errors --config=linux network_test
-        bazel test --test_output=errors --config=linux logistic_test
-        bazel test --test_output=errors --config=linux maxpool_test
-        bazel test --test_output=errors --config=linux falcon_lenet_test
+        cat data/train_party_0.csv
+        # bazel test --test_output=errors --config=linux logistic_test maxpool_test falcon_lenent_test
+        # bazel test --test_output=errors --config=linux common_test
+        # bazel test --test_output=errors --config=linux network_test
+        # bazel test --test_output=errors --config=linux logistic_test
+        # bazel test --test_output=errors --config=linux maxpool_test
+        # bazel test --test_output=errors --config=linux falcon_lenet_test
         # bazel test --config=linux primitive_test
         # bazel test --config=linux protocol_aby3_test
         # bazel test --config=linux prng_test
@@ -78,6 +82,8 @@ jobs:
     
     - name: get python ldflags
       run: python3.9-config --ldflags
+
+    - uses: actions/checkout@v3
     - name: bazel build
       run: |
         bazel test --test_output=errors --config=darwin_x86_64 --config=macos common_test
