--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: 
       - master
       - develop
-      - feature/falcon_namespace
+      - feature/falcon_namespace #
       - feature/workflow # for test
     # Publish semver tags as releases.
     tags: [ '*.*.*' ]
