--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       shell: bash
 
     - name: bazel test
-      uses: actions/checkout@v3
+    #  uses: actions/checkout@v3
       run: |
         cat data/train_party_0.csv
         # bazel test --test_output=errors --config=linux logistic_test maxpool_test falcon_lenent_test
