--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,8 +55,8 @@ jobs:
     - name: bazel test
       # uses: actions/checkout@v3
       run: |
-        cat data/train_party_0.csv
-        # bazel test --test_output=errors --config=linux logistic_test maxpool_test falcon_lenent_test
+        #cat data/train_party_0.csv
+        bazel test --test_output=errors --config=linux logistic_test maxpool_test falcon_lenent_test
         # bazel test --test_output=errors --config=linux common_test
         # bazel test --test_output=errors --config=linux network_test
         # bazel test --test_output=errors --config=linux logistic_test
